--- a/cartisan-web/src/main/resources/application-log.yml
+++ b/cartisan-web/src/main/resources/application-log.yml
@@ -1,19 +1,19 @@
 logging:
   pattern:
-    file: "[%d{yyyyMMdd HHmmss.SSS} %X{identify}] %level - [%thread %logger{30}] - [%replace(%msg){'\n', ''}]%n"
+    file: "[%d{yyyyMMdd HHmmss.SSS} %X{request-id} %X{user}] %level - [%thread %logger{30}] - [%replace(%msg){'\n', ''}]%n"
+  level:
+    root: info
+
+---
+spring:
+  profiles: local, dev
+logging:
+  pattern:
+    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID} %10.10X{request-id} %10.10X{user}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx"
   level:
     root: info
     org.apache.http.wire: info
     org.apache.http.headers: info
+    # 在日志中打印应用映射的所有请求路径
     org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping: trace
     com.cartisan: debug
-
----
-spring:
-  profiles: local
-logging:
-  pattern:
-#    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID} %10.10X{identify}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx"
-    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID} %10.10X{identify} %10.10X{user}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx"
-#    console: "[%d{yyyyMMdd HHmmss.SSS} %X{identify}] %level - [%thread %logger{30}] - [%replace(%msg){'\n', ''}]%n"
-
