--- a/cartisan-parent/pom.xml
+++ b/cartisan-parent/pom.xml
@@ -58,7 +58,6 @@
                 <scope>import</scope>
             </dependency>
 
-
             <!-- 数据库 -->
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
@@ -222,4 +221,16 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>nexus-releases</id>
+            <name>Nexus Release Repository</name>
+            <url>http://nexus.zsgcm.com/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>http://nexus.zsgcm.com/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
