apply any modify

--- a/cartisan-cloud/src/main/resources/application-cloud.yml
+++ b/cartisan-cloud/src/main/resources/application-cloud.yml
@@ -11,9 +11,9 @@ spring:
       client:
         enabled: true
 
-  devtools:
-    restart:
-      log-condition-evaluation-delta: false
+#  devtools:
+#    restart:
+#      log-condition-evaluation-delta: false
 
 eureka:
   instance:
