--- a/cartisan-parent/pom.xml
+++ b/cartisan-parent/pom.xml
@@ -28,6 +28,9 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
 
+<!--        <docker.image.prefix>cartisan</docker.image.prefix>-->
+<!--        <docker.repo>repository:5000</docker.repo>-->
+
         <!-- db -->
 <!--        <mybatis.spring.boot.version>2.1.0</mybatis.spring.boot.version>-->
         <mybatis.spring.boot.version>2.0.0</mybatis.spring.boot.version>
@@ -219,19 +222,45 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
+<!--                <version>3.8.1</version>-->
+<!--                <configuration>-->
+<!--                    <source>1.8</source>-->
+<!--                    <target>1.8</target>-->
+<!--                    <encoding>UTF-8</encoding>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--            <plugin>-->
+<!--                <groupId>com.spotify</groupId>-->
+<!--                <artifactId>docker-maven-plugin</artifactId>-->
+<!--                <version>0.4.3</version>-->
+<!--                <configuration>-->
+<!--                    <forceTags>true</forceTags>-->
+<!--                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>-->
+<!--                    <imageTags>-->
+<!--                        <imageTag>${project.version}</imageTag>-->
+<!--                        <imageTag>latest</imageTag>-->
+<!--                    </imageTags>-->
+<!--                    <baseImage>java:8</baseImage>-->
+<!--                    <entryPoint>["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/${project.build.finalName}.jar"]</entryPoint>-->
+<!--                    <cmd>["&#45;&#45;spring.profiles.active=docker"]</cmd>-->
+<!--                    <resources>-->
+<!--                        <resource>-->
+<!--                            <targetPath>/</targetPath>-->
+<!--                            <directory>${project.build.directory}</directory>-->
+<!--                            <include>${project.build.finalName}.jar</include>-->
+<!--                        </resource>-->
+<!--                    </resources>-->
+<!--                    <image>${docker.image.prefix}/${project.artifactId}</image>-->
+<!--                    <newName>${docker.repo}/${project.artifactId}</newName>-->
+<!--                    <imageName>${docker.repo}/${project.artifactId}</imageName>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
     </build>
-<!--    <distributionManagement>-->
+    <distributionManagement>
 <!--        <repository>-->
 <!--            <id>nexus-releases</id>-->
 <!--            <name>Nexus Release Repository</name>-->
@@ -242,5 +271,24 @@
 <!--            <name>Nexus Snapshot Repository</name>-->
 <!--            <url>http://nexus.zsgcm.com/repository/maven-snapshots/</url>-->
 <!--        </snapshotRepository>-->
-<!--    </distributionManagement>-->
+    </distributionManagement>
+
+<!--    <repositories>-->
+<!--        <repository>-->
+<!--            <id>spring-snapshots</id>-->
+<!--            <name>Spring Snapshots</name>-->
+<!--            <url>https://repo.spring.io/snapshot</url>-->
+<!--            <snapshots>-->
+<!--                <enabled>true</enabled>-->
+<!--            </snapshots>-->
+<!--        </repository>-->
+<!--        <repository>-->
+<!--            <id>spring-milestones</id>-->
+<!--            <name>Spring Milestones</name>-->
+<!--            <url>https://repo.spring.io/milestone</url>-->
+<!--            <snapshots>-->
+<!--                <enabled>false</enabled>-->
+<!--            </snapshots>-->
+<!--        </repository>-->
+<!--    </repositories>-->
 </project>
