--- a/cartisan-parent/pom.xml
+++ b/cartisan-parent/pom.xml
@@ -41,7 +41,8 @@
     <guava.version>30.1.1-jre</guava.version>
     <commons-io.version>2.9.0</commons-io.version>
     <commons-collections4.version>4.4</commons-collections4.version>
-    <mapstruct.version>1.4.2.Final</mapstruct.version>
+    <lombok.version>1.18.10</lombok.version>
+    <mapstruct.version>1.3.1.Final</mapstruct.version>
     <jjwt.version>0.11.2</jjwt.version>
     <zxing.version>3.4.1</zxing.version>
 
@@ -193,6 +194,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
       <optional>true</optional>
     </dependency>
   </dependencies>
