--- a/cartisan-persistence/src/main/resources/application-mysql.yml
+++ b/cartisan-persistence/src/main/resources/application-mysql.yml
@@ -85,14 +85,17 @@ logging:
     org.hibernate.type.descriptor.sql.BasicExtractor: info
 
 mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
   # 指向实体类包路径
-  type-aliases-package: com.cartisan
-  # mapper xml 文件地址
-  mapper-locations: classpath:mapper/**/*.xml
-  # 检查 mybatis 配置是否存在，一般命名为 mybatis-config.xml
-  check-config-location: true
-  # 执行模式。默认是 SIMPLE
-  executor-type: simple
+#  type-aliases-package: com.cartisan
+#  # mapper xml 文件地址
+#  mapper-locations: classpath:mapper/**/*.xml
+#  # 检查 mybatis 配置是否存在，一般命名为 mybatis-config.xml
+#  check-config-location: true
+#  # 执行模式。默认是 SIMPLE
+#  executor-type: simple
+
 
 
 
