--- a/cartisan-parent/pom.xml
+++ b/cartisan-parent/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.3.12.RELEASE</version>
+    <version>2.4.12</version>
     <relativePath/>
   </parent>
 
@@ -26,7 +26,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <java.version>1.8</java.version>
-    <spring-cloud.version>Hoxton.SR11</spring-cloud.version>
+    <spring-cloud.version>2020.0.4</spring-cloud.version>
 
     <!--        <docker.image.prefix>cartisan</docker.image.prefix>-->
     <!--        <docker.repo>repository:5000</docker.repo>-->
@@ -38,10 +38,10 @@
     <p6spy.version>3.9.1</p6spy.version>
 
     <!-- util -->
-    <guava.version>30.1.1-jre</guava.version>
+    <guava.version>31.0.1-jre</guava.version>
     <commons-io.version>2.9.0</commons-io.version>
     <commons-collections4.version>4.4</commons-collections4.version>
-    <lombok.version>1.18.10</lombok.version>
+    <lombok.version>1.18.22</lombok.version>
     <mapstruct.version>1.3.1.Final</mapstruct.version>
     <jjwt.version>0.11.2</jjwt.version>
     <zxing.version>3.4.1</zxing.version>
@@ -68,6 +68,13 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
         <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.alibaba.cloud</groupId>
+        <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+        <version>2021.1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -214,7 +221,6 @@
         <plugin>
           <groupId>org.flywaydb</groupId>
           <artifactId>flyway-maven-plugin</artifactId>
-          <version>${flyway.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
