--- a/pom.xml
+++ b/pom.xml
@@ -2,37 +2,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.cartisan</groupId>
-    <artifactId>cartisan</artifactId>
-    <version>1.0-SNAPSHOT</version>
+  <groupId>com.cartisan</groupId>
+  <artifactId>cartisan</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
-    <packaging>pom</packaging>
+  <packaging>pom</packaging>
 
-    <name>cartisan</name>
-    <description>Cartisan</description>
+  <name>cartisan</name>
+  <description>Cartisan</description>
 
-    <modules>
-        <module>cartisan-parent</module>
-        <module>cartisan-core</module>
-        <module>cartisan-persistence</module>
-        <module>cartisan-web</module>
-        <module>cartisan-security</module>
-      <module>cartisan-kafka</module>
-    </modules>
+  <modules>
+    <module>cartisan-parent</module>
+    <module>cartisan-core</module>
+    <module>cartisan-persistence</module>
+    <module>cartisan-web</module>
+    <module>cartisan-security</module>
+    <module>cartisan-kafka</module>
+  </modules>
 
-    <distributionManagement>
-        <repository>
-            <id>nexus-releases</id>
-            <name>Nexus Release Repository</name>
-            <url>http://nexus.zsgcm.com/repository/maven-releases/</url>
-        </repository>
+  <distributionManagement>
+    <!--        <repository>-->
+    <!--            <id>nexus-releases</id>-->
+    <!--            <name>Nexus Release Repository</name>-->
+    <!--            <url>http://nexus.zsgcm.com/repository/maven-releases/</url>-->
+    <!--        </repository>-->
 
-        <snapshotRepository>
-            <id>nexus-snapshots</id>
-            <name>Nexus Release Repository</name>
-            <url>http://nexus.zsgcm.com/repository/maven-snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
+    <!--        <snapshotRepository>-->
+    <!--            <id>nexus-snapshots</id>-->
+    <!--            <name>Nexus Release Repository</name>-->
+    <!--            <url>http://nexus.zsgcm.com/repository/maven-snapshots/</url>-->
+    <!--        </snapshotRepository>-->
+  </distributionManagement>
 </project>
