update lombok and mapstruct version

--- a/cartisan-parent/pom.xml
+++ b/cartisan-parent/pom.xml
@@ -42,7 +42,7 @@
     <commons-io.version>2.9.0</commons-io.version>
     <commons-collections4.version>4.4</commons-collections4.version>
     <lombok.version>1.18.22</lombok.version>
-    <mapstruct.version>1.3.1.Final</mapstruct.version>
+    <mapstruct.version>1.4.2.Final</mapstruct.version>
     <jjwt.version>0.11.2</jjwt.version>
     <zxing.version>3.4.1</zxing.version>
 
@@ -128,12 +128,12 @@
         <version>${mapstruct.version}</version>
       </dependency>
 
-      <dependency>
-        <groupId>org.mapstruct</groupId>
-        <artifactId>mapstruct-processor</artifactId>
-        <version>${mapstruct.version}</version>
-        <scope>provided</scope>
-      </dependency>
+<!--      <dependency>-->
+<!--        <groupId>org.mapstruct</groupId>-->
+<!--        <artifactId>mapstruct-processor</artifactId>-->
+<!--        <version>${mapstruct.version}</version>-->
+<!--        <scope>provided</scope>-->
+<!--      </dependency>-->
 
       <dependency>
         <groupId>io.jsonwebtoken</groupId>
@@ -202,7 +202,7 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>${lombok.version}</version>
-      <optional>true</optional>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
@@ -233,7 +233,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.1</version>
+        <version>3.8.1</version>
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
@@ -243,12 +243,12 @@
               <artifactId>lombok</artifactId>
               <version>${lombok.version}</version>
             </path>
-            <!-- This is needed when using Lombok 1.18.16 and above -->
-            <path>
-              <groupId>org.projectlombok</groupId>
-              <artifactId>lombok-mapstruct-binding</artifactId>
-              <version>0.2.0</version>
-            </path>
+<!--            &lt;!&ndash; This is needed when using Lombok 1.18.16 and above &ndash;&gt;-->
+<!--            <path>-->
+<!--              <groupId>org.projectlombok</groupId>-->
+<!--              <artifactId>lombok-mapstruct-binding</artifactId>-->
+<!--              <version>0.2.0</version>-->
+<!--            </path>-->
             <!-- Mapstruct should follow the lombok path(s) -->
             <path>
               <groupId>org.mapstruct</groupId>
