--- a/cartisan-parent/pom.xml
+++ b/cartisan-parent/pom.xml
@@ -46,6 +46,8 @@
     <jjwt.version>0.11.2</jjwt.version>
     <zxing.version>3.4.1</zxing.version>
 
+    <log4j2.version>2.15.0</log4j2.version>
+
     <!-- 测试 -->
 
     <!-- Swagger 文档 -->
