--- a/cartisan-parent/pom.xml
+++ b/cartisan-parent/pom.xml
@@ -32,7 +32,7 @@
         <!--    <postgresql.version>42.2.25</postgresql.version>-->
         <!--    <ojdbc6.version>11.2.0.3</ojdbc6.version>-->
         <!--    <sqljdbc4.version>4.0</sqljdbc4.version>-->
-        <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
+        <mysql-connector-j.version>8.0.33</mysql-connector-j.version>
 
         <!-- 持久层 -->
         <!--    <mybatis-plus.version>3.5.3.1</mybatis-plus.version>-->
@@ -202,9 +202,9 @@
 
             <!-- 数据库 -->
             <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>${mysql-connector-java.version}</version>
+                <groupId>com.mysql</groupId>
+                <artifactId>mysql-connector-j</artifactId>
+                <version>${mysql-connector-j.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
